Fix for #2161 - Safari buttons get clipped
svn changeset:5707/svn branch:trunk

--- a/WebContent/ITMILL/themes/default/button/button.css
+++ b/WebContent/ITMILL/themes/default/button/button.css
@@ -2,6 +2,7 @@
 	cursor: pointer;
 	font-size: 13px;
 	white-space: nowrap;
+	margin: 0px;
 }
 
 .i-button img {
